[package]
name = "rawr"
version = "2.0.0"
authors = ["Beinsezii <beinsezii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
copypasta = "0.7"
copypasta-ext = "0.3"
rand = "0.8"

eframe = {version = "0.11", optional=true}

[features]
gui = ["eframe"]
default = ["gui"]

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1

[profile.bench]
lto = "fat"
opt-level = 3
codegen-units = 1
